--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "pages": [
-    "pages/order_fill/order_fill/order_fill",
     "pages/index/index",
+    "pages/order_fill/order_fill/order_fill",
     "pages/order_fill/category/category",
     "pages/order_fill/brand/brand",
     "pages/pay/pay_list",
-    "pages/sellProduct/sellProduct",
-    "pages/productCategory/productCategory",
-    "pages/scan/scan",
+    "pages/product/sellProduct/sellProduct",
+    "pages/product/productCategory/productCategory",
+    "pages/product/scan/scan",
     "pages/pay/cashier/cashier",
     "pages/pay/wechat/wechat"
   ],
